# codex

codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs  workflow_cmd.rs
codex-rs/workflow/: Cargo.toml
codex-rs/workflow/src/: layout.rs  lib.rs  manifest.rs  orchestrator.rs  session.rs  state.rs
